--- a/index.html
+++ b/index.html
@@ -192,5 +192,16 @@
             <h1>&copy;  Designed and Developed By Shreyas K S </h1>
         </div>
     </div>
+    
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <df-messenger
+      intent="WELCOME"
+      chat-title="BNMIT"
+      chat-icon="https://bnmit-students.contineo.in/parentseven2022/images/logo.png"
+      agent-id="c194b64e-2bc4-4be3-9c53-b3821b9ef29a"
+      language-code="en"
+    >
+    </df-messenger>
+    
 </body>
 </html>
